<resources>
    <string name="app_name">가람개비</string>
    <string name="app_name_korean">가람개비</string>
    <string name="app_desc_1">가천대생들을 위한 커뮤니티</string>
    <string name="app_desc_2">가람개비에서\n가천대 선후배를 찾아봐요!</string>
    <string name="trueString">TRUE</string>
    <string name="falseString">FALSE</string>
    <string name="default_notification_channel_id">high_importance_channel</string>
    <string name="default_notification_channel_name">high_importance_channel</string>
    <string name="networkingUpCase">NETWORKING</string>
    <string name="seminarUpCase">SEMINAR</string>
    <string name="collection">COLLECTION</string>
    <string name="soon_close">SOON_CLOSE</string>
    <string name="apply_complete">APPLY_COMPLETE</string>
    <string name="apply_cancel_complete">APPLY_CANCEL_COMPLETE</string>
    <string name="non_deposit_cancel">NON_DEPOSIT_CANCEL</string>
    <string name="refund_complete">REFUND_COMPLETE</string>
    <string name="apply_confirm">APPLY_CONFIRM</string>
    <string name="noti_collection">모아보기</string>
    <string name="noti_soon_close">마감임박</string>
    <string name="noti_apply_complete">신청완료</string>
    <string name="noti_apply_cancel_complete">신청취소완료</string>
    <string name="noti_non_deposit_cancel">미입금취소</string>
    <string name="noti_refund_complete">환불완료</string>
    <string name="noti_apply_confirm">신청확정</string>
    <string name="add">추가</string>
    <string name="now">현재</string>
    <string name="example">example</string>
    <string name="email_form">\@gachon.ac.kr</string>
    <string name="user">가람개비 유저</string>
    <string name="no_recommend_user">추천 유저가 없습니다</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="apple">APPLE</string>
    <string name="nickName">닉네임</string>
    <string name="edit">편집</string>
    <string name="belong">소속을 입력해주세요</string>
    <string name="sns">SNS</string>
    <string name="career">경력</string>
    <string name="company">회사</string>
    <string name="position">직함</string>
    <string name="working">재직 중</string>
    <string name="service_center">고객 센터</string>
    <string name="education">교육</string>
    <string name="institution">교육 기관</string>
    <string name="major">전공/과정</string>
    <string name="learning">교육 중</string>
    <string name="edit_profile_hint">8자 이내로 입력해주세요 (특수문자 불가)</string>
    <string name="wrong_nick_name">사용할 수 없는 닉네임입니다</string>
    <string name="oneLine_intro">한 줄 소개</string>
    <string name="oneLine_intro_hint">18자 이내로 입력해주세요 (예: 프리랜서 백엔드 개발자)</string>
    <string name="intro">자기소개</string>
    <string name="email">이메일</string>
    <string name="doing">하기</string>
    <string name="working_period">재직 기간</string>
    <string name="education_period">교육 기간</string>
    <string name="start_date">시작년월</string>
    <string name="end_date">종료년월</string>
    <string name="profile_save">프로필 저장</string>
    <string name="start">시작하기</string>
    <string name="next">다음</string>
    <string name="bank">은행</string>
    <string name="gathering">모아보기</string>
    <string name="seminar">세미나</string>
    <string name="networking">네트워킹</string>
    <string name="my_meeting">내 모임</string>
    <string name="no_meeting_desc">예정된 내 모임이 없습니다\n모임을 신청해주세요:)</string>
    <string name="gathering_seminar">세미나 모아보기</string>
    <string name="gathering_networking">네트워킹 모아보기</string>
    <string name="no_seminar1">세미나가 없습니다</string>
    <string name="no_networking1">네트워킹이 없습니다</string>
    <string name="my_profile_title">내 프로필</string>
    <string name="save">저장하기</string>
    <string name="remove">삭제하기</string>
    <string name="close">닫기</string>
    <string name="no">아니요</string>
    <string name="yes">예</string>
    <string name="check">확인</string>
    <string name="dDayBetween">D</string>
    <string name="dDay">D-Day</string>
    <string name="insta_char">@</string>
    <string name="cancel_complete">신청이 완료되었습니다</string>
    <string name="network_error_title"> 페이지를 불러올 수 없습니다 </string>
    <string name="network_error_content"> 다시 시도해주세요 </string>
    <string name="can_not_find_user">사용자를 찾을 수 없습니다</string>
    <string name="can_not_find_user_content">탈퇴하거나 차단된 사용자입니다</string>
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_my_page_title">마이페이지</string>
    <string name="fragment_home_toolbar">홈</string>
    <string name="fragment_home_no_user">가람개비 유저가 없습니다.</string>
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>
    <string name="register_nickname_desc">가람개비에서 사용할\n당신의 닉네임을 설정해주세요</string>
    <string name="register_input_nickname_desc">닉네임을 입력해주세요 (최대 8글자)</string>
    <string name="register_nickname_invalid">8자이내, 한/영문, 숫자만 사용 가능합니다</string>
    <string name="school_certification">가천대생 인증을 진행해주세요</string>
    <string name="school_certification_desc">가람개비 사용을위해서는 가천대생 인증이 필요해요\n가천대학교 이메일 인증을 진행해주세요</string>
    <string name="send_email">이메일 발송하기</string>
    <string name="re_send_email">이메일 재발송하기(%s분 %s초)</string>
    <string name="re_send_email_time_zero">이메일 재발송하기</string>
    <string name="register_email_duplicated">이미 가입한 이메일입니다</string>
    <string name="check_email_desc">메일을 받지 못하신 경우, 스팸 메일함을 확인해주세요.</string>
    <string name="check_num_desc">인증번호가 올바르지 않습니다</string>
    <string name="email_auth_complete">이메일 인증완료</string>
    <string name="certification_num">인증번호 6자리</string>
    <string name="certification_num_check">인증</string>
    <string name="register_email_desc">프로필에 기재할\n이메일 주소를 알려주세요</string>
    <string name="register_input_email_desc">이메일 주소를 입력주세요</string>
    <string name="register_email_state">이메일 형식이 올바르지 않습니다</string>
    <string name="register_email_gachon">\@gachon.ac.kr</string>
    <string name="register_belong_desc">프로필에 기재할\n본인의 소속을 알려주세요</string>
    <string name="register_belong_career">본인의 경력을\n적어주세요</string>
    <string name="register_belong_edu">본인이 받은 교육을\n적어주세요</string>
    <string name="register_belong_profile_save">프로필 저장</string>
    <string name="caution_input_22">22자 이내로 작성해주세요</string>
    <string name="register_career_desc">재직 중이 아니라면\n가장 최근에 일한 곳을 알려주세요</string>
    <string name="register_input_company_desc">회사명을 입력해주세요</string>
    <string name="register_input_position_desc">직함을 입력주세요(예: 백엔드 개발자)</string>
    <string name="register_no_career">아직 경력이 없으신가요?</string>
    <string name="register_go_education">교육 입력하기</string>
    <string name="register_belong_length">/22</string>
    <string name="register_education_desc">가장 최근에 소속되었던\n교육기관을 알려주세요</string>
    <string name="register_input_institution_desc">교육기관을 입력주세요</string>
    <string name="register_input_major">전공/과정을 입력해주세요 (예: 웹 개발 과정)</string>
    <string name="register_yes_career">경력이 있으신가요?</string>
    <string name="register_go_career">경력 입력하기</string>
    <string name="register_complete">가입이\n완료되었습니다</string>
    <string name="register_welcome_user">님, 환영합니다</string>
    <string name="register_welcome_user_new_line">님,\n환영합니다</string>
    <string name="register_agree_all">전체 동의하기</string>
    <string name="register_agree_over_14">(필수) 만 14세 이상이에요</string>
    <string name="register_agree_term">(필수) 이용약관 및 개인정보수집이용 동의</string>
    <string name="close_text">닫기</string>
    <string name="delete_q">삭제하시겠습니까?</string>
    <string name="delete_done">삭제가 완료되었습니다.</string>
    <string name="cancel_dialog">신청 취소가 완료되었습니다"</string>
    <string name="home_networking_help_dialog">네트워킹은 참석자들과 서로 대화하며 진행\n되는 행사입니다</string>
    <string name="home_seminar_help_dialog">세미나는 발표 위주로 진행되는 행사입니다.</string>
    <string name="save_failed">저장 실패</string>
    <string name="update">새로운 버전으로 업데이트 되었습니다.\n스토어로 이동해주세요.</string>
    <string name="save_failed_content">Wi-Fi 또는 셀룰러 네트워크에 연결되어\n있는지 확인하십시오.</string>
    <string name="etc">ETC</string>
    <string name="edit_my_profile">내 프로필 편집하기</string>
    <string name="sns_add_type">SNS 종류</string>
    <string name="sns_add_type_desc">표시할 이름을 입력해주세요 (예:블로그, 깃허브 등)</string>
    <string name="sns_add_link">링크</string>
    <string name="sns_add_link_desc">링크를 입력해주세요</string>
    <string name="sns_type_dialog_1">인스타그램</string>
    <string name="sns_type_dialog_2">블로그</string>
    <string name="sns_type_dialog_3">깃허브</string>
    <string name="sns_type_dialog_4">직접 입력</string>
    <string name="sns_type_dialog_insta_desc">영문문자, 숫자, -, _, . 사용 가능합니다</string>
    <string name="sns_type_dialog_blog_desc">블로그 주소를 입력해주세요</string>
    <string name="sns_type_dialog_github_desc">깃허브 Username을 입력해주세요</string>
    <string name="sns_address_dialog_etc_desc">링크를 직접 입력해주세요</string>
    <string name="sns_type_dialog_etc_desc">SNS 종류를 직접 입력해주세요</string>
    <string name="sns_type_dialog_insta_state">인스타그램 계정이 올바르지 않습니다</string>
    <string name="sns_type_dialog_blog_state">블로그 주소가 올바르지 않습니다</string>
    <string name="sns_type_dialog_github_state">깃허브 Username이 올바르지 않습니다</string>
    <string name="sns_type_dialog_etc_state">링크가 올바르지 않습니다</string>
    <string name="email_wrong_state">이메일 형식이 올바르지 않습니다</string>
    <string name="some_id">로건</string>
    <string name="sns_desc">유저들과 소통을 위해서 SNS 주소를 남겨주세요! </string>
    <string name="career_desc">지금 하고 있거나\n이전에 한 일을 알려주세요</string>
    <string name="edu_desc">지금 다니고 있거나 이전에 다녔던\n학교,부트캠프 등 교육기관을 입력해주세요</string>
    <string name="myemail">답변받을 이메일주소</string>
    <string name="cs_info">최대한 신속하게 답변해드릴게요.\n답변을 못받으셨다면 스팸 메일함도 확인해주세요.</string>
    <string name="email_checkbox_desc">이메일 정보 제공 동의\n답변을 보내드리기 위해 필요해요</string>
    <string name="send">보내기</string>
    <string name="회원탈퇴">회원탈퇴</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal_note_desc">탈퇴 시 가람개비 내 모든 데이터는 삭제됩니다.\n복구가 불가하니 신중하게 선택해주세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_100">100자 이내로 작성해주세요</string>
    <string name="input_18">18자 이내로 작성해주세요</string>
    <string name="response_email">답변받을 이메일</string>
    <string name="response_email_desc">답변받을 이메일주소를 적어주세요</string>
    <string name="serviceCenter_information">고객센터 안내</string>
    <string name="reason">문의 사유</string>
    <string name="choose_why">질문 유형을 선택해주세요</string>
    <string name="serviceCenter_type_desc">문의 유형을 선택해주세요</string>
    <string name="serviceCenter_type_dialog_1">이용문의</string>
    <string name="serviceCenter_type_dialog_2">오류신고</string>
    <string name="serviceCenter_type_dialog_3">서비스 제안</string>
    <string name="serviceCenter_type_dialog_4">기타</string>
    <string name="withdrawal">탈퇴</string>
    <string name="withdrawal_caution">탈퇴 시 유의사항</string>
    <string name="account_email">계정 이메일</string>
    <string name="withdrawal_reason">탈퇴 사유</string>
    <string name="withdrawal_reason_desc">탈퇴 사유를 선택해주세요</string>
    <string name="input_content">내용을 적어주세요</string>
    <string name="withdrawal_desc">회원 탈퇴에 관한 모든 내용을 숙지하고,\n회원 탈퇴를 신청합니다.</string>
    <string name="withdrawal_type">회원 탈퇴에 관한 모든 내용을 숙지하고,\n회원 탈퇴를 신청합니다.</string>
    <string name="withdrawal_dialog_1">이용이 불편해서</string>
    <string name="withdrawal_dialog_2">사용 빈도가 낮아서</string>
    <string name="withdrawal_dialog_3">콘텐츠 내용이 부족해서</string>
    <string name="withdrawal_dialog_4">기타</string>
    <string name="seminar_input_account_number">계좌번호를 입력해주세요</string>
    <string name="seminar_select_bank">은행을 선택해주세요</string>
    <string name="no_seminar">예정된 세미나가 없습니다\n다음 세미나를 기대해주세요:)</string>
    <string name="no_seminar_this_month">이번 달은 세미나가 없습니다</string>
    <string name="no_seminar_scheduled">예정된 세미나가 없습니다</string>
    <string name="no_seminar_last">마감된 세미나가 없습니다</string>
    <string name="scheduled_seminar">예정된 세미나</string>
    <string name="last_seminar">마감된 세미나</string>
    <string name="seminar_name">신디</string>
    <string name="seminar_job">재학생</string>
    <string name="seminar_title">docker에 대해 알아보자</string>
    <string name="game_dialog1">이미 진행중인 게임입니다.</string>
    <string name="game_dialog2">참여하시겠습니까?</string>
    <string name="game_dialog_cancel">취소</string>
    <string name="game_dialog_participants">참가</string>
</resources>