<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_education_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:textColor="@color/black80"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="68dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_education_desc"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_education_title" />

        <TextView
            android:id="@+id/fragment_education_tv_institution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/institution"
            android:textColor="@color/black80"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/fragment_education_et_institution"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/fragment_education_et_institution"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_input_institution_desc"
            android:textColorHint="#D9D9D9"
            android:paddingStart="16dp"
            android:background="@drawable/register_et_border"
            app:layout_constraintTop_toBottomOf="@id/fragment_education_tv_institution" />

        <TextView
            android:id="@+id/fragment_education_tv_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/major"
            android:textColor="@color/black80"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/fragment_education_et_major"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_education_et_institution" />

        <EditText
            android:id="@+id/fragment_education_et_major"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_input_major"
            android:textColorHint="#D9D9D9"
            android:paddingStart="16dp"
            android:background="@drawable/register_et_border"
            app:layout_constraintTop_toBottomOf="@id/fragment_education_tv_major" />

        <CheckBox
            android:id="@+id/fragment_education_cb_isLearning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_education_et_major" />

        <TextView
            android:id="@+id/fragment_education_tv_isLearning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning"
            android:textColor="#8A8A8A"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_education_cb_isLearning"
            app:layout_constraintStart_toEndOf="@+id/fragment_education_cb_isLearning"
            app:layout_constraintTop_toTopOf="@+id/fragment_education_cb_isLearning" />

        <TextView
            android:id="@+id/fragment_education_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/register_yes_career"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_education_btn_next"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_education_tv_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/register_go_career"
            android:textSize="16sp"
            android:textColor="#2294FF"
            app:layout_constraintBottom_toTopOf="@+id/fragment_education_btn_next"
            app:layout_constraintStart_toEndOf="@id/fragment_education_tv" />

        <Button
            android:id="@+id/fragment_education_btn_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/register_btn_color_enable"
            android:stateListAnimator="@null"
            android:text="@string/profile_save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>