<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="34dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    android:background="@android:color/transparent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="45dp"

        android:background="@drawable/basic_bottom_sheet_dialog_layout"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/sns_add_type"
        android:textColor="@color/black80"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_dialog_tv_instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/sns_type_dialog_1"
        android:textSize="18sp"
        android:textColor="@color/black80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_dialog_tv_blog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:text="@string/sns_type_dialog_2"
        android:textSize="18sp"
        android:textColor="@color/black80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_tv_instagram"
        app:layout_goneMarginStart="28dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_dialog_tv_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:text="@string/sns_type_dialog_3"
        android:textSize="18sp"
        android:textColor="@color/black80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_tv_blog" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_dialog_tv_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/sns_type_dialog_4"
        android:textSize="18sp"
        android:textColor="@color/black80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_tv_github" />



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>