<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_korean"
        android:textColor="@color/black80"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_login_subtitle"/>

    <TextView
        android:id="@+id/fragment_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc_1"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black80"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_title" />

    <TextView
        android:id="@+id/fragment_login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_desc_2"
        android:textColor="@color/black80"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login_kakao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_subtitle" />

    <Button
        android:id="@+id/fragment_login_kakao"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/kakao_login"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:background="@drawable/fragment_login_kakao_color"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:src="@drawable/fragment_login_kakao_logo"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_login_kakao"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_kakao"
        app:layout_constraintTop_toTopOf="@+id/fragment_login_kakao" />
</androidx.constraintlayout.widget.ConstraintLayout>