<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="312dp"
        android:layout_height="150dp"
        android:background="@drawable/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/game_dialog1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_dialog1"
            android:textColor="@color/black80"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="24dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/game_dialog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_dialog2"
            android:textColor="@color/black80"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_dialog1"/>

        <TextView
            android:id="@+id/no"
            android:layout_width="63dp"
            android:layout_height="40dp"
            android:text="@string/game_dialog_cancel"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/blue_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/yes"
            />

        <TextView
            android:id="@+id/yes"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:text="@string/game_dialog_participants"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/blue_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>