<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteForBackground"
    >

    <TextView
        android:id="@+id/fragment_complete_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_complete"
        android:textSize="32sp"
        android:textColor="@color/black80"
        android:textStyle="bold"
        android:layout_marginTop="102dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_complete_tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_welcome_user"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:textColor="@color/black80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_complete_tv_title" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_complete_cl_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fragment_complete_btn_next"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp">
        <CheckBox
            android:id="@+id/fragment_complete_cb_personal"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/ic_checkbox_16dp"
            android:button="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/fragment_complete_tv_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_agree_term"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_complete_cb_personal"
            app:layout_constraintStart_toEndOf="@+id/fragment_complete_cb_personal"
            app:layout_constraintTop_toTopOf="@id/fragment_complete_cb_personal" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fragment_complete_btn_next"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/register_btn_color"
        android:stateListAnimator="@null"
        android:text="@string/start"
        android:enabled="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>